<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_title" />

    <TextView
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_name" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genre_name" />

    <TextView
        android:id="@+id/public_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publication_year" />

    <TextView
        android:id="@+id/book_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status" />
</LinearLayout>